--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
                 <span class="input-group-text Brødtekst tekst-mellem color-toggle" id="basic-addon3"
                       data-color-type="2">Besked</span>
                 <br>
-                <textarea class="form-control border-3 box-toggle color-toggle" aria-label="Besked" placeholder="Tekst"
+                <textarea class="Brødtekst form-control border-3 box-toggle color-toggle" aria-label="Besked" placeholder="Tekst"
                           data-box-type="4" data-color-type="2" tabindex="0"></textarea>
                 <div class="row padding11">
                     <div class="col-8 align-items-center d-flex pt-4">
